<resources>
    <string name="app_name">DrishtiAI</string>
    <string name="chat_select_model">Select a model ...</string>
    <string name="chat_loading_model">Loading model...</string>
    <string name="chat_model_cannot_be_loaded">The model selected for the chat cannot be loaded</string>
    <string name="chat_ask_question">Ask a question</string>
    <string name="chat_model_deleted">Model \'%1$s\' deleted</string>
    <string name="chat_select_chat">Select a chat</string>
    <string name="chat_view_chats">View Chats</string>
    <string name="chat_message_copied">Message copied</string>
    <string name="chat_thinking">Thinking ...</string>
    <string name="chat_message_copy">Copy</string>
    <string name="chat_message_share">Share</string>
    <string name="chat_no_task_created">No tasks created</string>
    <string name="chat_create_task">Create a task</string>
    <string name="chat_select_task">Select A Task</string>
    <string name="chat_drawer_new_chat">New Chat</string>
    <string name="chat_drawer_new_task">New Task</string>
    <string name="chat_drawer_manage_tasks">Manage Tasks</string>
    <string name="chat_drawer_previous_chat">Chats</string>
    <string name="chat_options_edit_settings">Edit Chat Settings</string>
    <string name="chat_options_change_model">Change Model</string>
    <string name="chat_options_ctx_length_usage">Context Length Usage</string>
    <string name="dialog_title_delete_chat">Delete Chat</string>
    <string name="dialog_text_delete_chat">Are you sure you want to delete chat \'%1$s\'?</string>
    <string name="dialog_pos_delete">Delete</string>
    <string name="dialog_neg_cancel">Cancel</string>
    <string name="edit_chat_screen_title">Edit Chat Settings</string>
    <string name="edit_chat_new_settings_applied">New settings have been applied to the chat.</string>
    <string name="chat_settings_desc_task_update">Updates to the name and system prompt will only be reflected in the chat and not in the task.</string>
    <string name="chat_settings_desc_minp">minP is a sampling technique that limits the vocabulary choices during LLM inference, ensuring that only tokens with probabilities exceeding the minP threshold are considered, leading to more focused and less random outputs.</string>
    <string name="chat_settings_desc_temp">Temperature is a parameter that controls the randomness and creativity of LLM outputs, with lower temperatures producing more deterministic and focused responses, and higher temperatures leading to more diverse and creative outputs.</string>
    <string name="chat_settings_desc_ctx_length">The context length of a large language model (LLM) refers to the maximum number of tokens (words or subwords) it can process in a single input or output sequence. Larger context sizes need more memory.</string>
    <string name="chat_settings_desc_n_threads">The number of CPU threads to use for inference.</string>
    <string name="chat_settings_label_ctx_size">Context Size</string>
    <string name="chat_settings_label_temp">Temperature</string>
    <string name="chat_settings_label_minp">min-p</string>
    <string name="chat_settings_label_sys_prompt">System Prompt</string>
    <string name="chat_settings_label_chat_name">Chat Name</string>
    <string name="chat_settings_take_from_gguf">Take from GGUF Model</string>
    <string name="context_size_taken_from_model">Context size taken from model</string>
    <string name="chat_settings_title_num_tokens">No. of tokens</string>
    <string name="chat_settings_err_min_ctx_size">Context size should be at least 200 tokens</string>
    <string name="chat_settings_err_load_llm">Error: Could not load LLM model for the chat</string>
    <string name="chat_model_list_screen_title">Choose Model</string>
    <string name="chat_model_list_desc">Select a downloaded model from below to use as a \'default\' model for this chat.</string>
    <string name="chat_model_list_sort_date">Sort by Date Added</string>
    <string name="chat_model_list_sort_name">Sort by Name</string>
    <string name="chat_model_list_add_model">New Model</string>
    <string name="task_create_task_title">Create Task</string>
    <string name="task_create_task_name">Task Name</string>
    <string name="task_create_task_sys_prompt">System Prompt</string>
    <string name="task_create_task_select_model">Select Model</string>
    <string name="task_create_task_add">Add</string>
    <string name="task_edit_task_title">Edit Task</string>
    <string name="task_edit_task_update">Update</string>
    <string name="task_popup_edit_task">Edit Task</string>
    <string name="task_popup_delete_task">Delete Task</string>
    <string name="tasks_manage_tasks_title">Manage Tasks</string>
    <string name="tasks_manage_tasks_desc">Tasks are chat templates with a system prompt and model defined. Use them to perform quick actions with the selected SLM model.</string>
    <string name="dialog_delete_task_title">Delete Task</string>
    <string name="add_new_model_title">Add New Model</string>
    <string name="download_model_step_des">Download a model to your device. Models are files with a .gguf extension. Choose any model from the list below to start downloading it on your device: </string>
    <string name="download_model_browse_hf">Browse from HuggingFace</string>
    <string name="download_model_download">Download Model</string>
    <string name="download_model_desc_download_location">Models are downloaded in the \'Downloads\' directory of your device</string>
    <string name="download_model_select_gguf">Select a GGUF file from the file explorer</string>
    <string name="download_models_select_gguf_button">Select GGUF file</string>
    <string name="download_model_gguf_url">URL for GGUF Instruct Model</string>
    <string name="download_model_hf_screen_title">Browse Models from HuggingFace</string>
    <string name="download_model_hf_search_label">Search for models ...</string>
    <string name="download_model_hf_details_title">Model Details</string>
    <string name="dialog_ctx_usage_title">Context Length Usage</string>
    <string name="dialog_ctx_usage_text">You have consumed %1$s tokens out of available %2$s tokens.</string>
    <string name="dialog_ctx_usage_close">Close</string>
    <string name="dialog_err_title">An error occurred</string>
    <string name="dialog_err_text">The app is unable to load the model. The error message is: %1$s</string>
    <string name="dialog_err_change_model">Change model</string>
    <string name="dialog_err_close">Close</string>
    <string name="dialog_progress_copy_model_title">Copying model file...</string>
    <string name="dialog_progress_copy_model_text">%1$s\n(The model needs to be copied to the app\'s internal directory for use)</string>
    <string name="toast_invalid_file">Invalid file</string>
    <string name="chat_options_clear_messages">Clear Chat Messages</string>
    <string name="chat_options_clear_messages_text">Are you sure you clear all messages from this chat?</string>
    <string name="dialog_pos_clear">Clear</string>
    <string name="task_popup_add_shortcut">Add Shortcut</string>
    <string name="task_popup_remove_shortcut">Remove Shortcut</string>
    <string name="chat_options_change_folder">Change Folder</string>
    <string name="chat_drawer_folders">Folders</string>
    <string name="dialog_delete_folder_text">Are you sure you want to delete the folder \'%1$s\'? Chats within the folder will not be deleted.</string>
    <string name="dialog_delete_folder_with_chats_text">Are you sure you want to delete the folder \'%1$s\'? Deleting the folder will also delete all the chats in it.</string>
    <string name="dialog_delete_folder_title">Delete Folder</string>
    <string name="dialog_select_folder_title">Select a Folder to store the chat</string>
    <string name="dialog_delete_folder_with_chats_title">Delete Folder With Chats</string>
    <string name="dialog_folder_opts_edit">Edit Folder Name</string>
    <string name="dialog_folder_opts_delete_folder">Delete Folder</string>
    <string name="dialog_folder_opts_delete_folder_chats">Delete Folder With Chats</string>
    <string name="dialog_create_folder_title">Create Folder</string>
    <string name="dialog_create_folder_button_text">Create</string>
    <string name="dialog_create_folder_placeholder">Folder Name</string>
    <string name="dialog_edit_folder_name_title">Edit Folder Name</string>
    <string name="dialog_edit_folder_button_text">Edit</string>
    <string name="edit_chat_message_done">Done</string>
    <string name="label_device_ram">Device RAM: %1$.2f GB used of %2$.2f GB total</string>
    <string name="download_model_step_title">Step 1: Download the model</string>
    <string name="import_model_step_title">Step 2: Import the model</string>
    <string name="import_model_step_des">Select the .gguf model you downloaded in step 1. The app will copy the model to its internal storage.</string>
    <string name="button_text_back">Back</string>
    <string name="button_text_next">Next</string>
    <string name="download_model_next_step_des">Once the models have been downloaded, go to the next section on \'Importing Models\'</string>
    <string name="download_model_step_hf_browse">Browse the model from HuggingFace and download the .gguf model file.</string>
    <string name="dialog_invalid_file_title">Invalid File</string>
    <string name="dialog_invalid_file_text">The selected file is not a valid GGUF file.</string>
</resources>
